--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 body {
     color: white;
-    background-color:  rgb(0, 0, 0);
+    background-image: url("./img/double-bubble-dark.webp");
     font-family: Arial, Helvetica, sans-serif;
 }
 
+h2 {
+    color: blue;
+}
+
 ul {
-    display: flex;
-    justify-content: space-between;
     list-style-type: none;
-    align-items: center;
     padding: 16px;
+}
+
+.img01 {
+    background-color: f0f0f0;
 }
 
 a {
@@ -54,6 +59,31 @@ footer p {
     padding: 0px 50px;
 }
 
-nav a:hover{
-    color:#007bff;
+nav a:hover {
+    color: #007bff;
+}
+
+ul {
+    padding: 0;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: #ffffff; /* Azul */
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+nav a:hover {
+    color: #007bff;
+}
+
+li div {
+    margin-bottom: 20px;
 }
