--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
 body {
-    color: white;
+    color: rgb(255, 255, 255);
     background-image: url("./img/double-bubble-dark.webp");
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0%;
+    padding: 0;
 }
 
-h2 {
-    color: blue;
+
+h3{
+    text-align: center;
+}
+
+h5{
+    color: black;
 }
 
 ul {
     list-style-type: none;
     padding: 16px;
+    justify-content: space-between;
+    display: flex;
+    margin: 0%;
 }
 
 .img01 {
@@ -33,7 +43,7 @@ header img {
 }
 
 h1 {
-    color: #007bff;
+    color: #ffffff;
 }
 
 footer img {
@@ -86,4 +96,8 @@ nav a:hover {
 
 li div {
     margin-bottom: 20px;
+}
+
+.card-text{
+    color: black;
 }
